Added header image, text, styling

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,78 @@
-h1 {
+body {
+  font-family: "Monserrat", sans-serif;
+}
+.container {
+  max-width: 1400px;
+  margin: 0 auto;
+}
+header {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url(../images/surf-header-bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: white;
+  text-align: center;
+  padding: 200px 0;
+}
+
+header h1 {
+  font-size: 96px;
+  font-weight: 600;
+  line-height: 1.5;
+  margin: 0;
+}
+header h2 {
   font-size: 40px;
-  font-family: "Montserrat";
+  font-weight: 400;
+  line-height: 1.5;
+  margin: 0;
+}
+
+header h3 {
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 1.5;
+  letter-spacing: 5px;
+  margin: 0;
+}
+header a {
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  background: white;
+  text-decoration: none;
+  color: #3e5f6e;
+  padding: 16px 32px;
+  margin-top: 32px;
+  display: inline-block;
+  border: solid 1px #3e5f6e;
+  border-radius: 4px;
+  transition: all 150ms ease-in-out;
+}
+header a:hover {
+  background: #3e5f6e;
+  color: white;
+}
+
+@media (max-width: 900px) {
+  header {
+    padding: 60px 0;
+  }
+  header h1 {
+    font-size: 48px;
+    line-height: 1;
+  }
+  header h2 {
+    font-size: 20px;
+  }
+  header h3 {
+    font-size: 12px;
+    margin-bottom: 20px;
+  }
+  header a {
+    padding: 8px 16px;
+  }
 }
