--- a/src/styles.css
+++ b/src/styles.css
@@ -57,6 +57,49 @@ header a:hover {
   color: white;
 }
 
+footer {
+  color: white;
+  background-image: linear-gradient(
+      rgba(62, 95, 110, 0.9),
+      rgba(62, 95, 110, 0.9)
+    ),
+    url(../images/surf-footer-bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 80px 0;
+}
+footer h3 {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 30px;
+}
+footer p {
+  font-weight: 400;
+  font-size: 16x;
+  line-height: 24px;
+  opacity: 0.9;
+  margin-right: 15px;
+}
+footer li {
+  list-style: none;
+  margin: 10px 0;
+  padding: 0;
+}
+footer ul {
+  padding: 0;
+}
+footer a {
+  color: white;
+  opacity: 0.7;
+}
+section {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 2fr 2fr;
+}
 @media (max-width: 900px) {
   header {
     padding: 60px 0;
