Added card section with three beaches info

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,9 @@ body {
   max-width: 1400px;
   margin: 0 auto;
 }
+.text-center {
+  text-align: center;
+}
 header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
     url(../images/surf-header-bg.jpg);
@@ -70,9 +73,21 @@ main h2 {
   margin: 0;
 }
 main h3 {
-  font-weight: 700;
+  font-weight: 600;
   font-size: 40px;
   line-height: 1.5;
+  margin: 0;
+}
+main h4 {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 1.5;
+  margin: 0;
+}
+main h5 {
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 1;
   margin: 0;
 }
 main p {
@@ -80,8 +95,46 @@ main p {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
+  opacity: 0.9;
+}
+.second-section {
+  background: #cfd4d6;
+}
+.card {
+  background: white;
+  border-radius: 5px;
+}
+.card-h3 {
+  margin-bottom: 25px;
+}
+.card-body {
+  padding: 30px;
+}
+.card-footer {
+  padding: 0 30px 30px;
 }
 
+.button-card {
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  background: #3e5f6e;
+  text-decoration: none;
+  color: white;
+  padding: 10px 20px;
+
+  display: block;
+  border: solid 1px #3e5f6e;
+  border-radius: 4px;
+  transition: all 150ms ease-in-out;
+}
+.button-card:hover {
+  background: #f8f8f8;
+  color: #3e5f6e;
+}
 footer {
   color: white;
   background-image: linear-gradient(
@@ -121,9 +174,9 @@ footer a:hover {
   opacity: 1;
 }
 section {
-  max-width: 1200px;
+  max-width: 100%;
   margin: 0 auto;
-  padding: 100px 0;
+  padding: 100px;
 }
 .grid {
   display: grid;
@@ -136,9 +189,13 @@ section {
 .grid-3-cols-first-narrow {
   grid-template-columns: 1fr 2fr 2fr;
 }
+.grid-3-cols {
+  grid-template-columns: 1fr 1fr 1fr;
+}
 .image-responsive {
   max-width: 100%;
   border-radius: 5px;
+  display: block;
 }
 
 @media (max-width: 960px) {
