--- a/src/styles.css
+++ b/src/styles.css
@@ -114,6 +114,10 @@ main p {
   padding: 0 30px 30px;
 }
 
+.embed-map {
+  width: 100%;
+  aspect-ratio: 1/1;
+}
 .button-card {
   font-size: 14px;
   font-weight: 600;
