--- a/src/styles.css
+++ b/src/styles.css
@@ -114,9 +114,12 @@ main p {
   padding: 0 30px 30px;
 }
 
-.embed-map {
+.embed {
   width: 100%;
   aspect-ratio: 1/1;
+}
+.instagram-embeds {
+  margin: 30px 0;
 }
 .button-card {
   font-size: 14px;
@@ -184,7 +187,6 @@ section {
 }
 .grid {
   display: grid;
-
   grid-gap: 64px;
 }
 .grid-2-cols {
@@ -233,5 +235,8 @@ section {
   footer ul,
   footer p {
     margin: 8px 0;
+  }
+  .embed {
+    aspect-ratio: 16/9;
   }
 }
