--- a/src/styles.css
+++ b/src/styles.css
@@ -180,6 +180,10 @@ footer a:hover {
   font-weight: bold;
   opacity: 1;
 }
+footer i {
+  font-size: 25px;
+  margin: 0 10px;
+}
 section {
   max-width: 100%;
   margin: 0 auto;
@@ -237,6 +241,6 @@ section {
     margin: 8px 0;
   }
   .embed {
-    aspect-ratio: 16/9;
+    aspect-ratio: 1/1;
   }
 }
